Implemented todo list

--- a/src/Components/AddButton/addButton.scss
+++ b/src/Components/AddButton/addButton.scss
@@ -1,11 +1,13 @@
-@import '../color.scss';
+@import "../../assets/style/color.scss";
 .add-btn {
-	background-color: $__blue_color;
-	color: $color_2;
-	border: none;
-	padding: 8px 15px;
-	border-radius: 5px;
-	cursor: pointer;
-
-	
+  background-color: $__blue_color;
+  color: $color_2;
+  border: none;
+  padding: 8px 15px;
+  border-radius: 5px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
 }
