--- a/src/assets/style/color.scss
+++ b/src/assets/style/color.scss
@@ -1,6 +1,6 @@
 $color_1: #333;
 $color_2: #fff;
-$__blue_color:#324eee
+$__blue_color: #324eee;
 $font-family_1: Arial, sans-serif;
 $background-color_1: #f4f4f4;
 $background-color_2: #fff;
