--- a/src/Components/AddTask/addTask.scss
+++ b/src/Components/AddTask/addTask.scss
@@ -1,10 +1,15 @@
-@import '../color.scss';
-.task-input {
-	flex: 1;
-	padding: 8px;
-	border: 1px solid #ccc;
-	border-top-left-radius: 5px;
-	border-bottom-left-radius: 5px;
-	font-size: 14px;
-	outline: none;
+.container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+  input {
+    width: 200px;
+    font-size: 16px;
+    padding: 10px 12px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    outline: none;
+  }
 }
