--- a/src/Components/AddTask/addTask.scss
+++ b/src/Components/AddTask/addTask.scss
@@ -12,4 +12,30 @@
     border: 1px solid #ccc;
     outline: none;
   }
+  textarea{
+    width: 200px;
+    font-size: 16px;
+    padding: 10px 12px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    outline: none;
+  }
+  ul {
+    list-style: none;
+    padding: 0;
+
+    li {
+      display: flex;
+      justify-content: space-between;
+      padding: 8px;
+      border: 1px solid #ddd;
+      margin-bottom: 5px;
+
+      span {
+        color: #ff0000;
+        cursor: pointer;
+      }
+    }
+  }
+
 }
