--- a/src/Components/AddTask/addTask.scss
+++ b/src/Components/AddTask/addTask.scss
@@ -1,24 +1,58 @@
 .container {
-  width: 100%;
+  box-sizing: border-box;
+  width: max-content;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   gap: 24px;
-  input {
-    width: 200px;
-    font-size: 16px;
-    padding: 10px 12px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    outline: none;
+  margin: 10px auto;
+  border: 1px solid gray;
+  border-radius: 10px;
+  padding: 20px;
+  background-color: #f0ecec;
+  .inputs-container {
+    box-sizing: border-box;
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 20px;
+    .input-container {
+      box-sizing: border-box;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: flex-start;
+      gap: 5px;
+      input {
+        width: 100%;
+        box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        font-size: 16px;
+        padding: 10px 12px;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+        outline: none;
+      }
+      textarea {
+        width: 100%;
+        box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        font-size: 16px;
+        padding: 10px 12px;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+        outline: none;
+        resize: vertical;
+      }
+    }
   }
-  textarea{
-    width: 200px;
-    font-size: 16px;
-    padding: 10px 12px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    outline: none;
+  .btn-container {
+    margin-top: 20px;
   }
   ul {
     list-style: none;
@@ -37,5 +71,4 @@
       }
     }
   }
-
 }
